--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="Styling/profile.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="Styling/navbar.css">
   <link rel="stylesheet" href="Styling/profile.css">
 </head>
@@ -33,20 +36,27 @@
     </div>
   </nav>
   <div class="container mt-5">
-    <h1>User Profile</h1>
+    <h1>User Profile <span><i class="fa-solid fa-gear icon" id="settings-icon"></i> </span>
+      </button></span></h1>
     <Alert id="message"></Alert>
     <div class="profile-info">
       <div class="user-details">
-        <p id="user-id"></p>
-        <p id="user-name"></p>
-        <p id="user-role"></p>
-        <p id="user-bio" type:>Bio: Keine Bio.</p>
+        <p id="id"></p>
+        <p id="name"></p>
+        <p id="role"></p>
+        <p id="created"></p>
+        <p id="bio">Bio: Keine Bio.</p>
       </div>
+
     </div>
+    <button id="save-button" class="btn btn-primary">Speichern</button>
   </div>
 
-  
+
+
+
   <script>
+    // decode
     const parseJwt = (token) => {
       try {
         return JSON.parse(atob(token.split('.')[1]));
@@ -54,11 +64,11 @@
         return null;
       }
     };
+    // User daten am Anfang
     document.addEventListener('DOMContentLoaded', async () => {
       try {
         const cookie = document.cookie
         const jwt = cookie.substring("jwt=".length)
-        console.log(jwt)
         const decode = parseJwt(jwt)
 
         const response = await fetch(`http://localhost:3000/api/user/finde/${decode.sub}`, {
@@ -72,15 +82,88 @@
         if (!response.ok) {
           throw new Error(`${response.statusText}`);
         }
+        const result = await response.json();
+        document.getElementById('id').textContent = `id: ${result.id}`;
+        document.getElementById('name').textContent = `Name: ${result.name}`;
+        document.getElementById('role').textContent = `Role: ${result.admin ? "Admin" : "User"}`;
+        document.getElementById('created').textContent = `Erstellt am: ${new Date(result.createdAt).toUTCString()}`;
+        document.getElementById('bio').textContent = `Bio: ${result.bio ? result.bio : "Keine Bio."}`;
+
+      } catch (error) {
+        console.error('Error:', error);
+        document.getElementById('message').textContent = 'Verbindung zum Server fehlgeschlagen.';
+      }
+    });
+
+    // Umwandlung p zu Input
+    document.getElementById('settings-icon').addEventListener('click', () => {
+      const userDetails = document.querySelector('.user-details');
+      const paragraphs = userDetails.querySelectorAll('p');
+      paragraphs.forEach(p => {
+        if (p.id === "id" || p.id === "created" || p.id === "role") {
+          return;
+        }
+        const input = document.createElement('input');
+        input.type = 'text';
+        input.value = p.textContent.split(': ')[1];
+        input.className = 'form-control';
+        input.id = p.id
+        userDetails.replaceChild(input, p);
+      });
+      // Zum erscheinen des Buttons 
+      document.getElementById('save-button').style.display = 'block';
+    });
+
+    document.getElementById('save-button').addEventListener('click', async () => {
+      const userDetails = document.querySelector('.user-details');
+      const inputs = userDetails.querySelectorAll('input');
+      const data = {};
+
+      inputs.forEach(input => {
+        const id = input.id
+        const value = input.value
+        data[id] = value;
+      });
+      data["id"] = document.getElementById("id").innerText.substring("id: ".length)
+      try {
+        const cookie = document.cookie;
+        const jwt = cookie.substring("jwt=".length);
+
+        const response = await fetch(`http://localhost:3000/api/user/aendern`, {
+          method: 'PUT',
+          headers: {
+            "Authorization": `Bearer ${jwt}`,
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(data)
+        });
+
+        if (!response.ok) {
+          throw new Error(`${response.statusText}`);
+        }
 
         const result = await response.json();
-        console.log(result)
 
-        // Nehmen wir an, result enthält die Benutzerdaten
-        document.getElementById('user-id').textContent = `id: ${result.id}`;
-        document.getElementById('user-name').textContent = `Name: ${result.name}`;
-        document.getElementById('user-role').textContent = `Role: ${result.admin ? "Admin" : "User"}`;
-        document.getElementById('user-role').textContent = `Erstellt am: ${new Date(result.createdAt).toUTCString()}`;
+        document.getElementById('id').textContent = `id: ${result.id}`;
+        document.getElementById('name').textContent = `Name: ${result.name}`;
+        document.getElementById('role').textContent = `Role: ${result.admin ? "Admin" : "User"}`;
+        document.getElementById('created').textContent = `Erstellt am: ${new Date(result.createdAt).toUTCString()}`;
+        document.getElementById('bio').textContent = `Bio: ${result.bio ? result.bio : "Keine Bio."}`;
+
+        // Convert inputs back to paragraphs
+        inputs.forEach(input => {
+          const p = document.createElement('p');
+          p.textContent = input.value;
+          p.id = input.id
+          if (input.id === "name") {
+            p.textContent = "Name: " + input.value
+          } else {
+            p.textContent = "Bio: " + input.value
+          }
+          userDetails.replaceChild(p, input);
+        });
+
+        document.getElementById('save-button').style.display = 'none';
 
       } catch (error) {
         console.error('Error:', error);
