--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -2,19 +2,20 @@
 <html lang="de">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XSS Test Seite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Styling/echostyle.css">
-    <link rel="stylesheet" href="Styling/navbar.css"> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XSS Test Seite</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="Styling/echostyle.css">
+  <link rel="stylesheet" href="Styling/navbar.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="Profile.html" target="_parent">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,33 +31,34 @@
     </div>
   </nav>
 
-    <div class="container mt-5">
-      <h1>Wilkommen auf meiner Testseite</h1>
-        <form action="Echoinput.html" method="GET">
-            <div id="userInput" class="mb-3">
-                <label for="user-input" class="form-label">Geben Sie etwas ein:</label>
-                <input type="text" class="form-control" id="user-input" name="input">
-                <p>Sie haben eingegeben: <span id="user-output"></span></p>
-            </div>
-            <button type="submit" class="btn btn-primary">Abschicken</button>
-        </form>
-    
-           
-    </div>
+  <div class="container mt-5">
+    <h1>Wilkommen auf meiner Testseite</h1>
+    <form action="Echoinput.html">
+      <div id="userInput" class="mb-3">
+        <label for="user-input" class="form-label">Geben Sie etwas ein:</label>
+        <input type="text" class="form-control" id="user-input" name="input">
+        <p>Sie haben eingegeben: <span id="user-output"></span></p>
+      </div>
+      <button type="submit" class="btn btn-primary">Abschicken</button>
+    </form>
 
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const userInput = params.get('input');
-        if (userInput) {
-            document.getElementById('user-output').innerHTML = userInput;
-        }else{
-          document.getElementById('user-output').innerHTML = "Kein Input.";
-        }
-        document.getElementById('delete-jwt').addEventListener('click', () => {
-            document.cookie = 'jwt=; max-age=0; path=/';
-            window.location.href = '/';
-        });
-    </script>
+
+  </div>
+  <script src="./script/checkJWT.js"></script>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const userInput = params.get('input');
+    if (userInput) {
+      document.getElementById('user-output').innerHTML = userInput;
+    } else {
+      document.getElementById('user-output').innerHTML = "Kein Input.";
+    }
+    document.getElementById('delete-jwt').addEventListener('click', () => {
+      document.cookie = 'jwt=; max-age=0; path=/';
+      window.location.href = '/';
+    });
+  </script>
 </body>
 
 </html>
