--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Profile</title>
-
   <link rel="stylesheet" href="Styling/profile.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,6 +13,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="Styling/navbar.css">
   <link rel="stylesheet" href="Styling/profile.css">
+  <link rel="stylesheet" href="Styling/echostyle.css">
 </head>
 
 <body>
@@ -50,8 +50,28 @@
     </div>
     <button id="save-button" class="btn btn-primary">Speichern</button>
   </div>
+  <!-- Besseres Bioinput. -->
+  <!-- <div class="toolbar">
+    <button onclick="execCmd('bold')"><i class="fa fa-bold"></i></button>
+    <button onclick="execCmd('italic')"><i class="fa fa-italic"></i></button>
+    <button onclick="execCmd('underline')"><i class="fa fa-underline"></i></button>
+    <button onclick="execCmd('justifyLeft')"><i class="fa fa-align-left"></i></button>
+    <button onclick="execCmd('justifyCenter')"><i class="fa fa-align-center"></i></button>
+    <button onclick="execCmd('justifyRight')"><i class="fa fa-align-right"></i></button>
+    <button onclick="execCmd('justifyFull')"><i class="fa fa-align-justify"></i></button>
+    <button onclick="execCmd('insertUnorderedList')"><i class="fa fa-list-ul"></i></button>
+    <button onclick="execCmd('insertOrderedList')"><i class="fa fa-list-ol"></i></button>
+    <button onclick="execCmd('createLink', prompt('Enter URL:', 'http://'))"><i class="fa fa-link"></i></button>
+    <button onclick="execCmd('unlink')"><i class="fa fa-unlink"></i></button>
+  </div>
+  <div class="editor" contenteditable="true"></div>
+  <script>
+    function execCmd(command, value = null) {
+      document.execCommand(command, false, value);
+    }
+  </script> -->
 
-
+  <script src="./script/checkJWT.js"></script>
   <script>
     // decode
     const parseJwt = (token) => {
@@ -103,6 +123,7 @@
         const input = document.createElement('input');
         input.type = 'text';
         input.value = p.textContent.split(': ')[1];
+        input.innerHTML = p.innerHTML
         input.className = 'form-control';
         input.id = p.id
         userDetails.replaceChild(input, p);
