--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script/home.js"></script>
+
     <link rel="stylesheet" href="Styling/style.css">
     <title>Login Seite</title>
 </head>
@@ -19,6 +19,8 @@
             <input type="submit" value="Einloggen" id="login-btn">
         </form>
     </div>
+
+    <script src="./script/checkJWT.js"></script>
 
     <script>
         // https://stackoverflow.com/questions/38552003/how-to-decode-jwt-token-in-javascript-without-using-a-library
