Stored XSS und Profil suche gemacht.

--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -89,9 +89,12 @@
         id = params.get('id')
         const cookie = document.cookie
         const jwt = cookie.substring("jwt=".length)
+        document.getElementById('settings-icon').style.display = 'none';
         if (!id) {
+          // Eigenes Profil
           const decode = parseJwt(jwt)
           id = decode.sub
+          document.getElementById('settings-icon').style.display = 'block';
         }
 
 
