--- a/frontend/Echoinput.html
+++ b/frontend/Echoinput.html
@@ -27,7 +27,10 @@
           <a class="nav-link" href="Profile.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Commentsection.html">Kommentare</a>
+          <a class="nav-link" href="Community.html">Community</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="Search.html">Search</a>
         </li>
       </ul>
       <button type="button" class="btn btn-danger" id="delete-jwt">Abmelden</button>
